--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@stacks/auth": "^4.3.1",
     "@stacks/connect": "^6.9.0",
     "@stacks/network": "^4.3.4",
+    "chart.js": "^3.9.1",
     "next": "latest",
     "react": "18.1.0",
     "react-card-flip": "^1.1.5",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-use-draggable-scroll": "^0.4.4",
     "redstone-api": "^0.4.11",
@@ -24,6 +26,7 @@
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
